# mle-training

./: .gitignore  Assignment-2.1.ipynb  Assignment-2.2.ipynb  Dockerfile  README.md  env.yml  nonstandardcode.py  pyproject.toml  setup.py
artifacts/models/: grid_search_model.pkl
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  housing.doctree  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  housing.html  index.html  modules.html  objects.inv  search.html  searchindex.js
mlruns/1/03c4a47e23c94a799a5b6c80d1ab8ee3/: meta.yaml
mlruns/1/33dccadacbcf47489cb048565287358c/: meta.yaml
mlruns/1/bc8223e4000f4239850b2d0dbcfaab36/: meta.yaml
mlruns/2/: meta.yaml
mlruns/2/1915dd78a4bd4cc6ab11afd444269ef1/: meta.yaml
mlruns/2/2c1cc6307b8e461cb7cdf7851c571d2f/: meta.yaml
mlruns/2/2c5a4a675ea04ff28de81d190aaee547/: meta.yaml
mlruns/2/2dcab5de75004279baa281f3b554e002/: meta.yaml
mlruns/2/4c566462242a42a0a70ccc6550b70e3b/: meta.yaml
mlruns/2/4fd7f35885b342d3af4d9d661ed94648/: meta.yaml
mlruns/2/50fd918be55b444a832946dfcafe3fe1/: meta.yaml
mlruns/2/5d2f33c220384ac4851122ebc3cf4356/: meta.yaml
mlruns/2/65a2e3522285491badacc3d5e22fc818/: meta.yaml
mlruns/2/69fb8dd4f7cf42cdb61ad92f976fca58/: meta.yaml
mlruns/2/77624c0197f44f2b9f186149dc8772c1/: meta.yaml
src/housing/: ingest_data.py  logger.py  score.py  train.py
src/housing_Anish.egg-info/: PKG-INFO  SOURCES.txt
src/mle_Anish.S_housing.egg-info/: PKG-INFO  SOURCES.txt
test/unit_test/: ingest_data_test.py
(+44 files in other folders)
