[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "housing_Anish"
version = "v0.5"
authors = [
  { name="Anish Shukla", email="anish.shukla@tigeranalytics.com" },
]
description = "My housing solution package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Shuklanish/mle-training"
"Bug Tracker" = "https://github.com/Shuklanish/mle-training/issues"